Add ability to create shareable links to cards
